apps/stoat/gifbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stoat-gifbox
  namespace: stoat
  labels:
    app.kubernetes.io/name: stoat-gifbox
spec:
  type: ClusterIP
  ports:
    - port: 14706
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: stoat-gifbox
