apps/stoat/january-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stoat-january
  namespace: stoat
  labels:
    app.kubernetes.io/name: stoat-january
spec:
  type: ClusterIP
  ports:
    - port: 14705
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: stoat-january
