apps/stoat/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stoat-rabbitmq
  namespace: stoat
  labels:
    app.kubernetes.io/name: stoat-rabbitmq
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: amqp
      protocol: TCP
      name: amqp
  selector:
    app.kubernetes.io/name: stoat-rabbitmq
