apps/stoat/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stoat-web
  namespace: stoat
  labels:
    app.kubernetes.io/name: stoat-web
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: stoat-web
